# fuat_bot

./: .env.example  .gitignore  CLAUDE.md  README.md  debug_search.py  diagnose_indexing.py  pyproject.toml  reindex_with_better_chunks.py  requirements.txt  setup.sh  show_all_chunks.py
fuat_bot/: __init__.py  __main__.py  agent.py  calendar_tools.py  cli.py  config.py  contacts_tools.py  email_tools.py  memory.py  rag.py  telegram_interface.py  tools.py  usage_tracker.py  web_tools.py
